# 21-card-poker-cfr

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
cardpoker_cfr/: __init__.py  abstraction.py  cards.py  cfr.py  game.py  hand_eval.py  play.py  strategy.py  train.py
tests/: test_game_and_cfr.py  test_hand_eval.py
